# Bang

./: .gitignore  BANG.xml  Bang.cbp  BangDiagram.xml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  client  cmake_install.cmake  server  tests  text
googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake  googletest-distribution.cbp
googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
googletest-build/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gtest.cbp
googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
gtest/src/gtest-build/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
gtest/src/gtest-build/googlemock/: CTestTestfile.cmake  cmake_install.cmake
gtest/src/gtest-build/googlemock/gtest/: CTestTestfile.cmake  cmake_install.cmake
gtest/src/gtest-stamp/: download-gtest.cmake  extract-gtest.cmake
gtest/tmp/: gtest-cfgcmd.txt
include/: README.MD
logic/: README.MD
res/: README.MD
src/: hello_message.txt
src/BD/: DataBaseManager.cpp  DataBaseManager.h  checker.cpp
src/client/: CMakeLists.txt  main.cpp  socket.cpp  socket.h  test_server.py
src/conf/: db_conf  lastgame
src/controller/: GameController.h
src/game_controller/tests/: test.cpp
src/logic/: Card.h  CardsParser.cpp  GameManager.cpp  GameManager.h  GameSituation.h  Gun.h  Name.h  PlayerInfo.h  SituationParser.cpp  Step.h
src/logic/tests/: SimpleTests_01.cpp  SimpleTests_02.cpp  SimpleTests_03.cpp  SimpleTests_04.cpp  TestsForGameSituation.cpp
src/net/: Client.cpp  Client.h  MySQLCheck.cpp  README.MD  Server.cpp  Server.h  main_client.cpp  main_server.cpp  server.py  simple_server  simple_server.cpp  socket.cpp  socket.hpp
src/net/simple_server.dSYM/Contents/: Info.plist
src/net/simple_server.dSYM/Contents/Resources/DWARF/: simple_server
src/parsers/: CardsParser.cpp  CardsParser.h  README.MD  SituationParser.cpp  SituationParser.h  StepParser.cpp  StepParser.h  nlohmann.cpp
src/parsers/tests/: TestsForParsers.cpp
src/window/: Window.cpp  Window.h  hello_message.txt
tests/: first_test.cpp  test.cpp
